# error-chain-for-dumb-ides

./: .gitignore  Cargo.toml  README.md
src/: stubs.rs
